macros/tests/trybuild/no_into_impl.stderr
error[E0277]: the trait bound `Qux: From<Foo>` is not satisfied
 --> tests/trybuild/no_into_impl.rs:4:1
  |
4 | #[help]
  | ^^^^^^^ the trait `From<Foo>` is not implemented for `Qux`
  |
  = help: the trait `From<Phase1>` is implemented for `Qux`
  = help: for that trait implementation, expected `Phase1`, found `Foo`
  = note: this error originates in the attribute macro `help` (in Nightly builds, run with -Z macro-backtrace for more info)
